<resources>
    <string name="app_name">SHINE4U</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="logout">LOG OUT</string>
    <string name="permission">Permission</string>
    <string name="report">Report</string>
    <string name="search">Search</string>
    <string name="search_for">Search for</string>
    <string name="recommended_for_you">RECOMMENDED FOR YOU</string>
    <string name="new_and_trending">NEW AND TRENDING</string>
    <string name="legend">Legend</string>
    <string name="city_of_bones">City of Bones</string>
    <string name="harry_potter">Harry Potter</string>
    <string name="the_host">The Host</string>
    <string name="_1984">1984</string>
    <string name="les_mis_rables">Les Misérables</string>
    <string name="rebecca">Rebecca</string>
    <string name="twilight">Twilight</string>
    <string name="hamlet">Hamlet</string>
    <string name="books">Books</string>
    <string name="adventures">Adventures</string>
    <string name="comics">Comics</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="poetry">Poetry</string>
    <string name="romance">Romance</string>
    <string name="stories">Stories</string>
    <string name="detective">Detective</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="religion">Religion</string>
    <string name="autobiographies">Autobiographies</string>
    <string name="fanfiction">Fanfiction</string>
    <string name="literary_fiction">Literary Fiction</string>
    <string name="summary">Summary</string>
    <string name="title">Title:</string>
    <string name="enter_title">Enter title here</string>
    <string name="author">Author:</string>
    <string name="enter_author">Enter author here</string>
    <string name="status">Status:</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description and your opinions...</string>
    <string name="create_post">Create Post</string>
    <string name="cancel">Cancel</string>
    <string name="account">MY ACCOUNT</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="read_later">Read Later</string>
    <string name="options">OPTIONS</string>
    <string name="general">General</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="faq">FAQ</string>
    <string name="gmail">readdata@gmail.com</string>
    <string name="pass">sunshineapp</string>
    <string name="dark_mode">Dark mode</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="hide_number_of_upvote_downvote">Hide number of upvote/downvote</string>
    <string name="turn_off_all_notifications">Turn off all notifications</string>
    <string name="request_reviewer_permission">Request reviewer permission</string>
    <string name="general_settings">General settings</string>
    <string name="asked_for_the_reviewer_permission">asked for the reviewer permission</string>
    <string name="_3_hours_ago">3 hours ago</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="first_faq">Q: How do I post a review myself ?</string>
    <string name="first_faq_answer">A: First, you must request for reviewer permission in settings. Then, you need to contact the administrators through john@example.com and follow further instructions there to be approved as a reviewer</string>
    <string name="second_faq">Q: Will my post be deleted if its total votes is negative?</string>
    <string name="second_faq_answer">A: No, it won’t be deleted unless it violates our Community Rules. But keep in mind that if you have too many of negative reviews, your posts will be less likely displayed on homepage.</string>
    <string name="third_faq">Q: How can I get my account unbanned?</string>
    <string name="third_faq_answer">A: You need to contact the administrators through john@example.com and follow further instructions there to unban your account</string>
    <string name="fourth_faq">Q: Can I change my username?</string>
    <string name="fourth_faq_answer">Yes, you can</string>
    <string name="fifth_faq">Q: Can I change my security question ?</string>
    <string name="fifth_faq_answer">A: Yes, as long as you have your password</string>
    <string name="sixth_faq">Q: How can I report violated contents?</string>
    <string name="sixth_faq_answer">A: You can do that by pressing ... on the top right corner and then choose “Report”. Please notice that we only allow a user to report once every 5 minutes to avoid spamming.</string>
    <string name="seventh_faq">Q: Is there any age restriction?</string>
    <string name="seventh_faq_answer">A: There is not. But there are some books/stories that are inappropriate to children. We suggest what you should be at least 13 to use the app</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
</resources>