<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp">



    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_person_24"
        android:onClick="onClick"
        android:clickable="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:padding="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/username"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="5"
            android:id="@+id/usernameBox"
            android:background="@drawable/custom_edittext"
            android:textSize="16sp"
            android:onClick="onClick"
            android:clickable="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:padding="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/full_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="5"
            android:id="@+id/fullnameBox"
            android:background="@drawable/custom_edittext"
            android:textSize="16sp"
            android:onClick="onClick"
            android:clickable="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:padding="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/birthday"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="5"
            android:id="@+id/birthdayBox"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_baseline_edit_calendar_24"
            android:padding="10dp"
            android:textSize="16sp"
            android:onClick="onClick"
            android:clickable="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:padding="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/status"
            android:text="@string/gender"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="5"
            android:spinnerMode="dropdown"
            android:dropDownWidth="match_parent"
            android:id="@+id/gender_option"
            android:background="@drawable/custom_edittext"
            >
            <requestFocus />
        </Spinner>
    </LinearLayout>
</LinearLayout>
