<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/searchBar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableEnd="@drawable/ic_baseline_search_24"
                android:drawablePadding="8dp"
                android:elevation="3dp"
                android:ems="10"
                android:hint="@string/search_for"
                android:layout_margin="10dp"
                android:textStyle="italic"
                android:autofillHints="BookName"
                android:focusable="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/recommended_for_you"
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recommendRecView"
                android:orientation="horizontal"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/new_and_trending"
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newTrendingRecView"
                android:orientation="horizontal"
                android:layout_margin="10dp"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCreatePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_baseline_add_24"
        android:visibility="visible"
        app:backgroundTint="?attr/colorOnPrimary"
        app:fabSize="auto" />

</RelativeLayout>